# gok

./: Makefile  README.md
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  README.libusb  aclocal.m4  automatic-scanning.xml.in  config.h.in  configure  configure.in  direct-selection.xml.in  directed.xml.in  dwell-selection.xml.in  gok-1.0.pc.in  gok-with-references.schemas.in  gok-with-references.schemas.m4  gok.desktop  gok.desktop.in  inverse-scanning.xml.in  mouse.kbd.in  singlekey-automatic-scanning.xml.in  singlekey-inverse-scanning.xml.in
src/docs/: Makefile.in
src/docs/reference/: Makefile.am  Makefile.in  gok-docs.sgml  gok-sections.txt
src/docs/reference/html/: ch01.html  ch02.html  ch03.html  ch04.html  gok-GokButton.html  gok-arraylist.html  gok-callbacks.html  gok-command-common.html  gok-command-edge-data.html  gok-command-edge.html  gok-command-graph.html  gok-command-predictor.html  gok-command-vertex-data.html  gok-command-vertex.html  gok-global.html  gok-gok-action.html  gok-gok-branchback-stack.html  gok-gok-chunker.html  gok-gok-control.html  gok-gok-data.html  gok-gok-editor.html  gok-gok-feedback.html  gok-gok-gconf-keys.html  gok-gok-gconf.html  gok-gok-key.html  gok-gok-keyboard.html  gok-gok-keyslotter.html  gok-gok-log-priv.html  gok-gok-log-reader.html  gok-gok-log.html  gok-gok-modifier.html  gok-gok-output.html  gok-gok-page-accessmethod.html  gok-gok-page-actions.html  gok-gok-page-feedbacks.html  gok-gok-page-keysizespace.html  gok-gok-page-wordcomplete.html  gok-gok-predictor.html  gok-gok-scanner.html  gok-gok-settings-dialog.html  (+15 more)
src/docs/reference/tmpl/: arraylist.sgml  callbacks.sgml  command-common.sgml  command-edge-data.sgml  command-edge.sgml  command-graph.sgml  command-predictor.sgml  command-vertex-data.sgml  command-vertex.sgml  global.sgml  gok-action.sgml  gok-branchback-stack.sgml  gok-button.sgml  gok-chunker.sgml  gok-control.sgml  gok-data.sgml  gok-editor.sgml  gok-feedback.sgml  gok-gconf-keys.sgml  gok-gconf.sgml  gok-key.sgml  gok-keyboard.sgml  gok-keyslotter.sgml  gok-log-priv.sgml  gok-log-reader.sgml  gok-log.sgml  gok-modifier.sgml  gok-output.sgml  gok-page-accessmethod.sgml  gok-page-actions.sgml  gok-page-feedbacks.sgml  gok-page-keysizespace.sgml  gok-page-wordcomplete.sgml  gok-predictor.sgml  gok-scanner.sgml  gok-settings-dialog.sgml  gok-sound.sgml  gok-spy-priv.sgml  gok-spy.sgml  gok-unused.sgml  (+8 more)
src/docs/reference/xml/: api-index-full.xml  arraylist.xml  callbacks.xml  command-common.xml  command-edge-data.xml  command-edge.xml  command-graph.xml  command-predictor.xml  command-vertex-data.xml  command-vertex.xml  global.xml  gok-action.xml  gok-branchback-stack.xml  gok-button.xml  gok-chunker.xml  gok-control.xml  gok-data.xml  gok-editor.xml  gok-feedback.xml  gok-gconf-keys.xml  gok-gconf.xml  gok-key.xml  gok-keyboard.xml  gok-keyslotter.xml  gok-log-priv.xml  gok-log-reader.xml  gok-log.xml  gok-modifier.xml  gok-output.xml  gok-page-accessmethod.xml  gok-page-actions.xml  gok-page-feedbacks.xml  gok-page-keysizespace.xml  gok-page-wordcomplete.xml  gok-predictor.xml  gok-scanner.xml  gok-settings-dialog.xml  gok-sound.xml  gok-spy-priv.xml  gok-spy.xml  (+8 more)
src/gok/: Makefile.am  Makefile.in  arraylist.c  callbacks.c  callbacks.h  command-edge-data.c  command-edge.c  command-graph.c  command-graph.h  command-vertex-data.c  command-vertex.c  create-branching-keyboard.c  gok-action.c  gok-action.h  gok-bounds.c  gok-button.c  gok-button.h  gok-chunker.c  gok-chunker.h  gok-composer.c  gok-control.c  gok-control.h  gok-data.c  gok-data.h  gok-editor.c  gok-feedback.c  gok-feedback.h  gok-glade-helpers.c  gok-input.c  gok-input.h  gok-key.c  gok-key.h  gok-keyboard.c  gok-keyboard.h  gok-libusb.c  gok-libusb.h  gok-modifier-keymasks.h  gok-modifier.c  gok-modifier.h  gok-mousecontrol.c  (+41 more)
src/help/: Makefile.am  Makefile.in
src/help/gok/: Makefile.in
src/help/gok/C/: Makefile.am  Makefile.in  gok-C.omf
src/omf-install/: Makefile.am  Makefile.in
src/po/: LINGUAS  POTFILES.in  POTFILES.skip  am.po  ang.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ko.po  (+38 more)
src/samples/: Makefile.am  Makefile.in
