

SUBDIRS = gok po help omf-install docs samples

distuninstallcheck_listfiles = find . -type f -print | grep -v scrollkeeper

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = gok-1.0.pc

desktopdir = $(datadir)/applications
desktop_in_files = gok.desktop.in
desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
@INTLTOOL_DESKTOP_RULE@

kbd_in_files = \
	main.kbd.in			\
	gok-controls.kbd.in		\
	launcher.kbd.in			\
	text-operations.kbd.in		\
	quit.kbd.in			\
	hide.kbd.in			\
	quit.kbd.in			\
	move-resize.kbd.in		\
	numberpad.kbd.in		\
	valuator.kbd.in			\
	mouse.kbd.in

xml_in_files = direct-selection.xml.in	\
	automatic-scanning.xml.in	\
	inverse-scanning.xml.in		\
	dwell-selection.xml.in		\
	directed.xml.in			\
	singlekey-automatic-scanning.xml.in		\
	singlekey-inverse-scanning.xml.in 

xamdir = $(pkgdatadir)
xam_DATA = $(xml_in_files:.xml.in=.xam)
@INTLTOOL_XAM_RULE@

noinst_DATA = $(kbd_files)
kbd_files = $(kbd_in_files:.kbd.in=.kbd)
@INTLTOOL_KBD_RULE@

gladedir = $(pkgdatadir)/glade
glade_DATA = gok.glade2

icondir = $(datadir)/icons/hicolor/48x48/apps
icon_DATA = gok.png

sounddir = $(datadir)/sounds/freedesktop/stereo
sound_DATA =		\
	goksound1.wav	\
	goksound2.wav

gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor

install-data-hook: update-icon-cache
uninstall-hook: update-icon-cache remove-keyboard-files
update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		$(gtk_update_icon_cache); \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		echo "***   $(gtk_update_icon_cache)"; \
	fi
remove-keyboard-files:
	@rm -rf $(DESTDIR)$(datadir)/gok

EXTRA_DIST = \
	README				\
	README.libusb			\
	$(icon_DATA) \
	$(xml_in_files)			\
	$(kbd_in_files)			\
	$(pkgdata_DATA)                \
	$(desktop_in_files)		\
	$(desktop_DATA)			\
	$(glade_DATA)			\
	$(sound_DATA)			\
	gok-1.0.pc.in                  \
	gok-with-references.schemas.m4	\
	gok-with-references.schemas.in	\
	xmldocs.make

pkgdata_DATA = \
	qwerty.kbd                     \
	manage.kbd                     \
	dictionary.txt                 \
	gok.rc                         \
	latched.png		\
	locked.png		\
	empty.png		\
	value-min.png	\
	value-max.png	\
	value-less.png	\
	value-more.png	\
	value-fast-less.png	\
	value-fast-more.png	\
	NW.png		\
	NE.png		\
	SE.png		\
	SW.png		\
	North.png		\
	East.png		\
	South.png		\
	West.png		\
	small-empty.png		\
	goklogo.png			\
	Keyboard.kbd

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = gok.png

schemadir = @GCONF_SCHEMA_FILE_DIR@
schema_DATA = gok.schemas

gok-with-references.schemas.in: $(srcdir)/gok-with-references.schemas.m4
	m4 $(srcdir)/gok-with-references.schemas.m4 > gok-with-references.schemas.in

@INTLTOOL_SCHEMAS_RULE@

# If we use FORCE instead of depending on Makefile then there is 
# a problem building rpms because the rpm build process installs 
# to a temporary location
gok.schemas: Makefile gok-with-references.schemas
	sed -e s/\$$pkgdatadir/`echo $(pkgdatadir) | sed s/\\\\//\\\\\\\\\\\\//g`/g -e s/\$$sounddir/`echo $(sounddir) | sed s/\\\\//\\\\\\\\\\\\//g`/g gok-with-references.schemas > gok.schemas

Keyboard.kbd: FORCE qwerty.kbd
	cat $(srcdir)/qwerty.kbd | sed 's/qwerty/Keyboard/' > Keyboard.kbd

FORCE:

install-data-local:
if GCONF_SCHEMAS_INSTALL
	$(mkinstalldirs) $(DESTDIR)$(schemadir)
	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) gconftool-2 --makefile-install-rule $(schema_DATA)
endif
	@for l in *; do 						\
		if [ -f $$l/main.kbd ]; then 				\
			$(mkinstalldirs) $(DESTDIR)$(datadir)/gok/$$l;	\
			for f in $$l/*.kbd; do				\
				echo copying $$f to $(DESTDIR)$(datadir)/gok/$$l;	\
				cp $$f $(DESTDIR)$(datadir)/gok/$$l; 	\
			done;						\
		fi;							\
	done

uninstall-local:
if GCONF_SCHEMAS_INSTALL
	-GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
	gconftool-2 --makefile-uninstall-rule $(schema_DATA)
endif

webdoc: gokwebdoc.tar.gz

gokwebdoc.tar.gz: README INSTALL help/gok/C/gok.xml
	rm -rf gokwebdoc
	mkdir gokwebdoc
	cp README gokwebdoc
	cp INSTALL gokwebdoc
	cp -r help/gok/C/figures gokwebdoc
	xsltproc -o gokwebdoc/gok-user-manual.html \
            /usr/share/xml/docbook/stylesheet/nwalsh/current/html/docbook.xsl \
	    help/gok/C/gok.xml
	tar czf gokwebdoc.tar.gz gokwebdoc
	rm -rf gokwebdoc

# Generate ChangeLog for releases
dist-hook:
	@if test -d "$(srcdir)/.git";						\
	then									\
		echo Creating ChangeLog &&					\
		( cd "$(top_srcdir)" &&						\
		  echo '# Generated by Makefile. Do not edit.'; echo;		\
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp	\
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog			\
		|| ( rm -f ChangeLog.tmp ;					\
			echo Failed to generate ChangeLog >&2 );		\
	else									\
		echo A git clone is required to generate a ChangeLog >&2;	\
	fi

DISTCHECK_CONFIGURE_FLAGS =		\
	--disable-schemas-install	\
	--enable-gtk-doc		\
	--enable-libusb-input

CLEANFILES = $(kbd_files)

DISTCLEANFILES =			\
	$(desktop_DATA)			\
	Keyboard.kbd			\
	gok-with-references.schemas	\
	$(schema_DATA)			\
	$(xam_DATA)

distclean-local:
	@for l in *; do 			\
		if [ -f $$l/main.kbd ]; then 	\
			rm -rf $$l;		\
		fi;				\
	done

MAINTAINERCLEANFILES =			\
	$(srcdir)/aclocal.m4		\
	$(srcdir)/compile		\
	$(srcdir)/config.guess		\
	$(srcdir)/config.h.in		\
	$(srcdir)/config.sub		\
	$(srcdir)/depcomp		\
	$(srcdir)/install-sh		\
	$(srcdir)/missing		\
	$(srcdir)/mkinstalldirs		\
	$(srcdir)/ltmain.sh		\
	$(srcdir)/omf.make		\
	$(srcdir)/gtk-doc.make

GITIGNOREFILES = C/ $(LANGDIRS)

-include $(top_srcdir)/git.mk
